# pipeline_weather_ml

./: .env  .gitignore  README.md  main.py  model.pkl  pyproject.toml  test.py
config/: .env  airflow.cfg
dags/: weather_dag.py
data/: temp_data.parquet  weather_data.json
ml/: db.py  predict.py  prepare_dataset.py  train_model.py
notebooks/: analysis_data.ipynb
src/: extract_data.py  load_data.py  transform_data.py
